[gd_scene load_steps=3 format=3 uid="uid://dcbrl5miuvflu"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_8ddlt"]

[sub_resource type="LabelSettings" id="LabelSettings_yj86k"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ddlt")

[node name="ShadowBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="OptionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -100.0
offset_right = 160.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsBackground" type="ColorRect" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsButtonContainer" type="VBoxContainer" parent="OptionsPanel/OptionsBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -43.0
offset_right = 74.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreenButton" type="Button" parent="OptionsPanel/OptionsBackground/OptionsButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Pantalla completa"

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel/OptionsBackground/OptionsButtonContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="VolumeLabel" type="Label" parent="OptionsPanel/OptionsBackground/OptionsButtonContainer"]
layout_mode = 2
text = "Volumen"
label_settings = SubResource("LabelSettings_yj86k")
horizontal_alignment = 1

[node name="OptionsReturnButton" type="Button" parent="OptionsPanel/OptionsBackground/OptionsButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volver"

[node name="OptionsExitButton" type="Button" parent="OptionsPanel/OptionsBackground/OptionsButtonContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Exit Level"

[node name="ConfirmExitDialog" type="ConfirmationDialog" parent="."]
title = "¿Estás seguro?"
size = Vector2i(217, 80)
ok_button_text = "Salir al menú"
dialog_text = "Perderás todo el progreso"
cancel_button_text = "Cancelar"

[connection signal="confirmed" from="ConfirmExitDialog" to="." method="_on_confirm_exit_dialog_confirmed"]
